# kdeconnect-kde

./: .arcconfig  .arclint  .craft.ini  .editorconfig  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KDE  KDEConnectMacros.cmake  README  README.md  REUSE.toml  config-X11.h.cmake  kcm.sh  kcmodule.sh  kdeconnect-non-plasma.desktop  kdeconnect-version.h.in  kdeconnect.appdata.xml  letsgo.sh  org.kde.kdeconnect.appdata.xml  org.kde.kdeconnect.desktop  org.kde.kdeconnect.kcm.appdata.xml  org.kde.kdeconnect.metainfo.xml  org.kde.kdeconnect.nonplasma.desktop  snapcraft.yaml
app/: CMakeLists.txt  Messages.sh  main.cpp  org.kde.kdeconnect.app.desktop  resources.qrc  resources.qrc.in
cli/: CMakeLists.txt  Messages.sh  kdeconnect-cli.cpp  kdeconnect.zsh
core/: CMakeLists.txt  Messages.sh  compositefiletransferjob.cpp  compositefiletransferjob.h  core_debug.cpp  core_debug.h  daemon.cpp  daemon.h  dbushelper.cpp  dbushelper.h  dbushelper.h.in  default_args.h  device.cpp  device.h  deviceinfo.h  filetransferjob.cpp  filetransferjob.h  kdebugnamespace.cpp  kdebugnamespace.h  kdeconnectconfig.cpp  kdeconnectconfig.h  kdeconnectplugin.cpp  kdeconnectplugin.h  kdeconnectplugin_config.cpp  kdeconnectplugin_config.h  kdeconnectpluginconfig.cpp  kdeconnectpluginconfig.h  networkpackage.cpp  networkpackage.h  networkpackagetypes.h  networkpacket.cpp  networkpacket.h  networkpackettypes.h  notificationserverinfo.cpp  notificationserverinfo.h  openconfig.cpp  openconfig.h  pairstate.h  pluginloader.cpp  pluginloader.h  (+3 more)
daemon/: CMakeLists.txt  Messages.sh  androidshine.notifyrc  daemon.cpp  daemon.h  default_args.h  desktop_daemon.cpp  desktop_daemon.h  device.cpp  device.h  kdeconnect.desktop  kdeconnect.notifyrc  kdeconnectd.cpp  kdeconnectd.desktop.cmake  kdeconnectd.service.in  networkpackage.cpp  networkpackage.h  networkpackagetypes.h  org.kde.kdeconnect.daemon.desktop.cmake  org.kde.kdeconnect.service.in
data/: CMakeLists.txt  kdeconnect-dde.desktop  kdeconnect-thunar.desktop  kdeconnect.contract  kdeconnect.ufw  org.kde.kdeconnect.kcm.appdata.xml  org.kde.kdeconnect.metainfo.xml  org.kde.kdeconnect_open.desktop
declarativeplugin/: CMakeLists.txt  kdeconnectdeclarativeplugin.cpp  kdeconnectdeclarativeplugin.h  keylistener.cpp  keylistener.h  objectfactory.cpp  objectfactory.h  plugins.qmltypes  pointerlocker.cpp  pointerlocker.h  pointerlockerwayland.cpp  pointerlockerwayland.h  qmldir  resources.qrc  responsewaiter.cpp  responsewaiter.h
fileitemactionplugin/: CMakeLists.txt  Messages.sh  kdeconnectsendfile.desktop  kdeconnectsendfile.json  sendfileitemaction.cpp  sendfileitemaction.h
indicator/: CMakeLists.txt  Info.plist  Messages.sh  deviceindicator.cpp  deviceindicator.h  indicatorhelper.cpp  indicatorhelper.h  indicatorhelper_mac.cpp  indicatorhelper_win.cpp  main.cpp  org.kde.kdeconnect.nonplasma.desktop  serviceregister_mac.h  serviceregister_mac.mm
interfaces/: CMakeLists.txt  commandsmodel.cpp  commandsmodel.h  conversationmessage.cpp  conversationmessage.h  dbushelpers.h  dbusinterfaces.cpp  dbusinterfaces.h  devicesmodel.cpp  devicesmodel.h  devicespluginfilterproxymodel.cpp  devicespluginfilterproxymodel.h  devicessortproxymodel.cpp  devicessortproxymodel.h  interfaces_debug.h  kdebugnamespace.cpp  modeltest.cpp  modeltest.h  notificationsmodel.cpp  notificationsmodel.h  pluginmodel.cpp  pluginmodel.h  remotecommandsmodel.cpp  remotecommandsmodel.h  remotesinksmodel.cpp  remotesinksmodel.h
kcm/: CMakeLists.txt  Messages.sh  assets.qrc  daemondbusinterface.cpp  daemondbusinterface.h  dbusinterfaces.cpp  dbusinterfaces.h  devicesmodel.cpp  devicesmodel.h  devicessortproxymodel.cpp  devicessortproxymodel.h  kcm.cpp  kcm.h  kcm.ui  kcm_kdeconnect.desktop  kcm_kdeconnect.json  kdebugnamespace.cpp  kdebugnamespace.h  kdeconnect-kcm.desktop  kdeconnect.desktop  list.qml  main.cpp  org.kde.kdeconnect.kcm.desktop  wizard.cpp  wizard.h  wizzard.ui
kcmplugin/: CMakeLists.txt  kdeconnectpluginkcm.cpp  kdeconnectpluginkcm.h
kded/: CMakeLists.txt  Messages.sh  config-kded.h.cmake  daemon.cpp  daemon.h  device.cpp  device.h  filetransferjob.cpp  filetransferjob.h  kdebugnamespace.h  kdeconnect.desktop  kdeconnect.notifyrc  kdeconnectd.cpp  kded.cpp  kded.h  networkpackage.cpp  networkpackage.h  networkpackagetypes.h  org.kde.kdeconnect.service.in
kio/: CMakeLists.txt  Messages.sh  kdebugnamespace.cpp  kdebugnamespace.h  kdeconnect-network.desktop  kdeconnect.json  kdeconnect.protocol  kiokdeconnect.cpp  kiokdeconnect.h  solid_kdeconnect.desktop
libkdeconnect/: CMakeLists.txt  KDEConnectConfig.cmake.in  dbusinterfaces.cpp  dbusinterfaces.h  devicesmodel.cpp  devicesmodel.h  kdebugnamespace.h  kdeconnect_export.h  notificationsmodel.cpp  notificationsmodel.h
models/: CMakeLists.txt  Messages.sh  commandsmodel.cpp  commandsmodel.h  conversationmessage.cpp  conversationmessage.h  devicesmodel.cpp  devicesmodel.h  devicespluginfilterproxymodel.cpp  devicespluginfilterproxymodel.h  devicessortproxymodel.h  notificationsmodel.cpp  notificationsmodel.h  pluginmodel.h  remotecommandsmodel.cpp  remotecommandsmodel.h  remotesinksmodel.cpp  remotesinksmodel.h
plugins/: CMakeLists.txt  Messages.sh  README.txt  kdeconnect.notifyrc  kdeconnect.schema.json  kdeconnect_plugin.desktop
settings/: CMakeLists.txt  Messages.sh  main.cpp  org.kde.kdeconnect-settings.desktop  org.kde.kdeconnect.settings.desktop
sfos/: CMakeLists.txt  kdeconnect-sfos.cpp  kdeconnect-sfos.desktop  kdeconnectd.desktop.cmake  sailfishdaemon.cpp
smsapp/: CMakeLists.txt  Messages.sh  attachmentinfo.cpp  attachmentinfo.h  attachmentshelper.cpp  attachmentshelper.h  conversationlistmodel.cpp  conversationlistmodel.h  conversationmodel.cpp  conversationmodel.h  conversationssortfilterproxymodel.cpp  conversationssortfilterproxymodel.h  gsmasciimap.cpp  gsmasciimap.h  main.cpp  org.kde.kdeconnect.sms.desktop  resources.qrc  smscharcount.h  smshelper.cpp  smshelper.h  thumbnailsprovider.cpp  thumbnailsprovider.h
src/: CMakeLists.txt  daemon.h  (+28 more)
(+1696 files in other folders)
